--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Sample Site</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Sample Site</title>
 </head>
 
 <body>
@@ -30,6 +30,7 @@
 
         <article>
           article 01
+          ＜p＞編集画面内での改行は画面には反映されません。＜/p＞
         </article>
 
         <article>
