--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
 
         <article>
           <h1>PとBR(改行の違い)</h1>
-          <h4>brなし</h4>
-          <P>
-            本文｜適当に文章を書いて下さい。
-            本文｜適当に文章を書いて下さい。
-          </P>
-          <h4>brあり</h4>
-          <P>
-            本文｜適当に文章を書いて下さい。<br>
-            本文｜適当に文章を書いて下さい。<br>
-          </P>
+    <h4>brなし</h4>
+    <P>
+      本文｜第五人格
+      本文｜IdentityV
+    </P>
+    <h4>brあり</h4>
+    <P>
+      本文｜ダンディ兄弟しか勝たん<br>
+      本文｜Rs石橋とジョン推し<br>
+    </P>
         </article>
 
         <article>
-          <h1>様々なリスト表示</h1>
-          <h4>UL：Unordered List</h4>
-          <ul>
-             <li>項目1</li>
-             <li>項目2</li>
-             <li>項目3</li>
-          </ul>
-          <h4>OL：Ordered List</h4>
-          <ol>
-           <li>項目1</li>
-            <li>項目2</li>
-            <li>項目3</li>
-          </ol>
+        <h1>様々なリスト表示</h1>
+        <h4>UL：Unordered List</h4>
+        <ul>
+           <li>項目1</li>しかし王者ALに勝てるのか
+           <li>項目2</li>秋のIVC見てない
+           <li>項目3</li>時間くれ
+        </ul>
+        <h4>OL：Ordered List</h4>
+        <ol>
+         <li>項目1</li>
+          <li>項目2</li>
+          <li>項目3</li>
+        </ol>
         </article>
 
         <article>
@@ -104,14 +104,15 @@
           </form>
         </article>
 
+
       </section>
 
       <aside>
         <h1>関連リンク</h1>
-        <ul>
-          <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
-          <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
-        </ul>
+    <ul>
+      <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
+      <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
+    </ul>
       </aside>
 
     </main>
