--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h4>brなし</h4>
     <P>
       本文｜第五人格
-      本文｜IdentityV
+      IdentityV
     </P>
     <h4>brあり</h4>
     <P>
@@ -52,9 +52,9 @@
         </ul>
         <h4>OL：Ordered List</h4>
         <ol>
-         <li>項目1</li>
-          <li>項目2</li>
-          <li>項目3</li>
+         <li>項目1</li>キャンメイクのマニキュア可愛い
+          <li>項目2</li>おすすめ
+          <li>項目3</li>ベリーピンク可愛いよ
         </ol>
         </article>
 
@@ -64,7 +64,7 @@
         </article>
 
         <article>
-          <h1>Sample Image</h1>
+          <h1>Sample images</h1>
           <img src="images/sample.jpg" width="480" alt="サンプル">
         </article>
 
