--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
         <article>
           <h1>Sample Video</h1>
+           <div class="youtube">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/d6yt9WiaUvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </article>
 
         <article>
