--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ja">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 640px)">
     <title>Sample Site</title>
 </head>
 
@@ -32,13 +34,13 @@
           <h1>PとBR(改行の違い)</h1>
     <h4>brなし</h4>
     <P>
-      本文｜第五人格
-      IdentityV
+      本文｜適当に文章を書いて下さい。
+      本文｜適当に文章を書いて下さい。
     </P>
     <h4>brあり</h4>
     <P>
-      本文｜ダンディ兄弟しか勝たん<br>
-      本文｜Rs石橋とジョン推し<br>
+      本文｜適当に文章を書いて下さい。<br>
+      本文｜適当に文章を書いて下さい。<br>
     </P>
         </article>
 
@@ -46,27 +48,25 @@
         <h1>様々なリスト表示</h1>
         <h4>UL：Unordered List</h4>
         <ul>
-           <li>項目1</li>しかし王者ALに勝てるのか
-           <li>項目2</li>秋のIVC見てない
-           <li>項目3</li>時間くれ
+           <li>項目1</li>
+           <li>項目2</li>
+           <li>項目3</li>
         </ul>
         <h4>OL：Ordered List</h4>
         <ol>
-         <li>項目1</li>キャンメイクのマニキュア可愛い
-          <li>項目2</li>おすすめ
-          <li>項目3</li>ベリーピンク可愛いよ
+         <li>項目1</li>
+          <li>項目2</li>
+          <li>項目3</li>
         </ol>
         </article>
 
         <article>
           <h1>Sample Video</h1>
-           <div class="youtube">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/d6yt9WiaUvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
         </article>
 
         <article>
-          <h1>Sample images</h1>
+          <h1>Sample Image</h1>
           <img src="images/sample.jpg" width="480" alt="サンプル">
         </article>
 
